# deeplearning

./: .gitignore  README.md  pyproject.toml
Activation Functions/: softmax.ipynb
Basics/Backpropagation/: backprop.ipynb
LLMs/BERT/training-bert/: 1 - Masked Language Modelling.ipynb  README.md
Loss Functions/: cross_entropy.ipynb
pytorch/: pyproject.toml
pytorch-official-tutorials/1-intro-to-pytorch/: 1_quickstart.ipynb
pytorch-official-tutorials/1-introduction-to-pytorch/: 3_datasets_and_dataloaders.ipynb
pytorch/pytorch-official-tutorials/: README.md
pytorch/pytorch-official-tutorials/1-introduction-to-pytorch/: 2_tensors.ipynb  3_datasets_and_dataloaders.ipynb
